[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_tradier"
version = "0.1.0"
description = "Tradier broker plugin for bt_api"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "cloudQuant", email = "yunjinqi@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_tradier"
Repository = "https://github.com/cloudQuant/bt_api_tradier"

[project.entry-points."bt_api.plugins"]
tradier = "bt_api_tradier.plugin:register_plugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "build>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bt_api_tradier*"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF100", "S", "PERF", "PIE790"]
ignore = ["E501", "B008", "N802", "N803", "S101", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
]
